--- a/pothole-app/index.html
+++ b/pothole-app/index.html
@@ -20,9 +20,9 @@
         <div class="app">
             <div class="app-header">
                 <div class="app-logo">
-                    <img src="https://aws-amplify.github.io/images/Logos/Amplify-Logo-White.svg" alt="AWS Amplify" />
+                    <img src="/assets/logo.png" alt="Pothole Logo" />
                 </div>
-                <h1>Welcome to AWS Amplify</h1>
+                <h1>Welcome to AWS BAmplify</h1>
             </div>
             <div class="app-body">
                 <button id="AnalyticsEventButton">Generate Analytics Event</button>
